adds unbeatable CPU Player

--- a/JavasScript/Tic Tac Toe/index.html
+++ b/JavasScript/Tic Tac Toe/index.html
@@ -53,10 +53,10 @@
                         class="font-fam-set font-size-set" 
                         name="select-type-p2" 
                         id="select-type-p2" 
-                        disabled="disabled"
+                        
                     >
                             <option value="human" selected>Human</option>
-                            <option value="cpu">Computer</option>
+                            <option value="cpu">Computer (unbeatable)</option>
                     </select>
                 </div>
                 <div class="player-mark round-shadow">
